# webrtc-rebroadcaster

./: .gitignore  Dockerfile  README.md  entrypoint.sh  main.cpp  make.sh
chrome_webrtc_mixer/: Dockerfile  entrypoint.sh
chromium_broadcaster/: Dockerfile  entrypoint.sh
echo_client/: CMakeLists.txt  main.cpp  manager.cpp  manager.h  websocket_client.cpp
echo_server/: echo.py
echo_server/static/: index.html
rebroadcast_client/: CMakeLists.txt  main.cpp  manager.cpp  manager.h  transcoder.cpp  transcoder.h  websocket_client.h
rebroadcast_server/: serve.py
rebroadcast_server/static/: index.html
